note.css
 :root {
  --color-primary: #3b82f6;
  --color-primary-hover: 37, 99, 235;
  --color-hover-btn: rgba(var(--color-primary-hover), 0.7);
  --color-primary-accent: #2563eb;
  --color-on-accent: #f6f6f6;
  --color-bg-main: #f9fafb;
  --color-bg-surface: #ffffff;
  --color-surface-border: rgba(var(--color-primary-hover), 0.2);
  --color-text-main: #111827;
  --color-text-muted: #6b7280;
  --color-warning: #f59e0b;

  --space-2xs: 4px;
  --space-xs: 8px;
  --space-sm: 12px;
  --space-md: 16px;
  --space-lg: 24px;
  --space-xl: 32px;

  --font-family-s: -apple-system, BlinkMacSystemFont, "segoe UI", Reboto, sans-serif;
  --font-family: Poppins, sans-serif;
  --font-size-xs: 12px;
  --font-size-sm: 14px;
  --font-size-md: 16px;
  --font-size-lg: 18px;
  --font-size-xl: 22px;
  --font-size-2xl: 28px;

  --sidebar-width: 12rem;
 }

 *, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
 }

 html, body {
  height: 100%;
 }

 body {
  background-color: var(--color-bg-main);
  font-family: var(--font-family-s);
  color: var(--color-text-main);

  overflow: hidden;
  line-height: 1.5;
  min-height: 100svh;
 }

 h1 {
  font-family: var(--font-family);
  font-weight: 700;
 }

 h1, h2, h3, h4, p {
  overflow-wrap: break-word;
 }

 button {
  cursor: pointer;
  overflow: hidden;
 }

 .notebook-container {
  display: flex;
  flex-direction: column;
  gap: var(--sapce-md);


  position: relative;
  height: 100svh;
 }

 .notebook-header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  border-bottom: 1px solid rgba(var(--color-primary-hover), 0.2);
 }

 .hamburger-menu {
  width: 44px;
  height: 44px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: var(--space-2xs);

  padding: var(--space-xs);

  border: none;
  background-color: transparent;
 }

 .hamburger-menu__bar {
  width: 20px;
  height: 2px;

  background-color: var(--color-primary);
 }

 .notebook-title {
  font-size: var(--font-size-xl);
  padding: var(--space-2xs);
 }

 .notes-container {
  flex: 1;
  display: flex;
  min-height: 0;
  height: auto;
 }

 .sidebar {
  width: var(--sidebar-width);

  min-width: 0;


  position: fixed;
  top: 3rem;
  bottom: 0;
  left: calc(var(--sidebar-width) * -1);

  background-color: var(--color-bg-surface);
  padding-inline: var(--space-xs);
  border-right: 1px solid var(--color-surface-border);

  display: flex;
  flex-direction: column;
  gap: var(--space-xs);

  z-index: 99;
  overflow: hidden;

  transition: left 0.3s ease;
 }

 .sidebar__header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  height: min-content;
  padding-block: var(--space-xs);

  border-bottom: 1px solid var(--color-surface-border);

 }

 .sidebar__title {
  font-size: var(--font-size-lg);
  font-weight: 500;
 }

 .note-list {
  display: flex;
  flex-direction: column;
  gap: var(--space-2xs);

  padding-inline: var(--space-2xs);

  overflow-y: auto;
  height: 100%;
  min-height: 0;

  scrollbar-width: none;

  -webkit-overflow-scrolling: touch;
  overscroll-behavior: contain;
 }

 .note-container-wrapper {
  min-width: 0;
  position: relative;
 }

 .note-title {
  font-size: var(--font-size-md);
  font-weight: 500;
 }

 .note {
  flex: 1;
  text-align: left;
  border: none;
  padding: var(--space-2xs) var(--space-xs);
 }

 .active-note {
  flex: 1;
  display: flex;
  flex-direction: column;

  height: 100%;
  min-height: 0;
  min-width: 0;
 }

 .note-title,
 .note,
 .active-note-title {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
 }

 .active-note-title {
  padding: var(--space-2xs) var(--space-sm);

  background-color: var(--color-bg-surface);
  border-radius: 999px;
  margin-inline: var(--space-sm);

  font-size: var(--font-size-lg);
  font-weight: 500;

  min-height: 0;
  max-width: 100%;
 }

 .active-note-title:empty::before {
  content: attr(placeholder);
  color: var(--color-text-muted);
  font-size: var(--font-size-sm);
  font-weight: 400;
  pointer-events: none;
 }

 .note-card {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: var(--space-2xs);

  height: 100%;
  min-height: 0;
  width: 100%;

  overflow: hidden;

  position: relative;
 }

 .notice-banner-message {
  position: absolute;
  top: var(--space-2xs);
  left: var(--space-2xs);

  width: 70%;
  padding: var(--space-md);

  display: flex;
  align-items: center;
  gap: var(--space-sm);

  font-size: var(--font-size-sm);

  color: var(--color-text-muted);
  background-color: var(--color-bg-surface);
  border: 1px solid var(--color-warning);
  border-radius: 4px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);

  z-index: 3;
 }

 .notice-banner {
  display: none;
  position: relative;
 }

 .notice-banner.is-visible {
  display: block;
 }

 .note-editor {
  flex: 1;
  background-color: var(--color-bg-main);
  padding: var(--space-sm) var(--space-md);

  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;

  overflow-y: auto;
  min-height: 0;

  white-space: pre-wrap;
  word-break: break-word;
  outline: none;
 }

 .note-editor:empty::before {
  content: attr(placeholder);
  color: var(--color-text-muted);
  font: var(--font-size-sm);
  font-weight: 400;
  pointer-events: none;

 }

 .note-card__footer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: stretch;
  gap: var(--space-sm);

  z-index: 98;
  padding: var(--space-xs);

  background-color: var(--color-bg-surface);
  border: 1px solid var(--color-surface-border);
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;

  position: absolute;
  right: -2px;
  bottom: 40px;

  transition: right 0.3s ease;
 }

 .footer-button {
  padding: var(--space-2xs) var(--space-xs);

  overflow: hidden;

  font-size: var(--font-size-xs);
  font-family: inherit;
  font-weight: 500;

  border: none;
  border-radius: var(--space-xs);
  background-color: var(--color-primary);
  color: var(--color-on-accent);

  box-shadow: 0px 4px 0px var(--color-primary-accent);

  transition: transform 0.1s ease, box-shadow 0.1s ease;
 }

 .footer-button:hover {
  background-color: var(--color-hover-btn);
 }

 .footer-button:active {
  transform: translateY(4px);
  box-shadow: 0 0 0 transparent;
 }

 .hide-show-footer-buttons {
  width: 56px;
  height: 30px;
  padding-inline: var(--space-xs);

  text-align: left;

  position: absolute;
  right: -2px;
  bottom: 5px;

  font-size: var(--font-size-md);
  font-weight: 600;

  background-color: var(--color-bg-surface);
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  border: 1px solid var(--color-surface-border);

  display: inline-flex;
  align-items: center;


  transition: all 0.3s ease;
 }

 /* ------------- Delete Banner------------- */
 .note-header-row {
  display: flex;
  align-items: center;
  gap: var(--space-2xs);

  width: 100%;
 }

 .menu-button {
  background: none;
  border: none;
  color: var(--color-text-muted);
  border-radius: 50%;

  overflow: hidden;

  padding: var(--space-xs);
  cursor: pointer;
 }

 .menu-button:hover {
  color: var(--color-text-main);
  background-color: #fafafa;
 }

 .delete-banner-hidden {
  position: absolute;
  top: 2rem;
  right: 0;

  z-index: 999;

  font-size: var(--font-size-sm);

  background-color: #e4ecf8;
  padding: var(--space-xs);
  border: 1px solid var(--color-surface-border);
  border-radius: 6px;

  display: flex;
  flex-direction: column;
  gap: var(--space-sm);
 }

 .delete-buttons {
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding-inline: var(--space-2xs);
 }

 .delete-buttons button {
  border: none;
  background-color: transparent;

  padding: var(--space-2xs);
 }


 /* =============================================== */
 /*                   States                     */
 /* =============================================== */

 .hidden {
  display: none !important;
 }

 .is-menu-open {
  left: 0;
 }

 .active {
  background-color: var(--color-surface-border);
 }

 .menu-open.top {
  transform-origin: top left;
  rotate: 38deg;
  transition: all 0.3s ease;
 }

 .menu-open.middle {
  opacity: 0;
  transition: all 0.3s ease;
 }

 .menu-open.bottom {
  transform-origin: bottom left;
  rotate: -38deg;
  transition: all 0.3s ease;
 }

 .hide-footer-card {
  right: -4rem;
 }

 .hide-footer-button {
  right: -2.3rem;
 }

 @media (min-width: 768px) {
  .sidebar {
    position: static;
    width: calc(var(--sidebar-width) + 4rem);
  }

  .notice-banner {
    width: 30%;
  }

  .hamburger-menu {
    display: none;
  }
 }

